--- a/css/CV.css
+++ b/css/CV.css
@@ -912,4 +912,143 @@
     width: 90%;
   }
 }
+
+.work {
+  position: absolute;
+  width: 100%;
+  min-height: 100vh;
+  margin-left: -11px;
+  background-color: rgba(255, 255, 255, 0.5);
+  -webkit-backdrop-filter: blur(6px);
+          backdrop-filter: blur(6px);
+  z-index: 2;
+}
+
+.work .projects {
+  margin-top: 2em;
+}
+
+.work .projects .languages .languages-name {
+  margin: 1em 0em 1em 0em;
+  text-align: center;
+  padding: 5px;
+  border-radius: 10px;
+  font-size: 1.2em;
+  font-weight: 500;
+}
+
+.work .projects .languages .languages-name-style {
+  -webkit-transition: 1s;
+  transition: 1s;
+  background-color: black;
+  color: white;
+  margin: 1em 0em 1em 0em;
+  padding: 5px;
+}
+
+.work .projects .projects-name {
+  padding-top: 1em;
+  height: 78vh;
+  overflow-y: auto;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 33% 33% 34%;
+      grid-template-columns: 33% 33% 34%;
+  justify-items: center;
+}
+
+.work .projects .projects-name .projects-data {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 1em;
+  display: -ms-grid;
+  display: grid;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-items: center;
+  margin-bottom: 2em;
+  border-radius: 10px;
+  -webkit-box-shadow: -5px -5px 12px rgba(255, 255, 255, 0.9), -2px -2px 12px rgba(255, 255, 255, 0.5), inset 2px 2px 8px rgba(255, 255, 255, 0.6), 3px 3px 12px black;
+          box-shadow: -5px -5px 12px rgba(255, 255, 255, 0.9), -2px -2px 12px rgba(255, 255, 255, 0.5), inset 2px 2px 8px rgba(255, 255, 255, 0.6), 3px 3px 12px black;
+}
+
+.work .projects .projects-name .projects-data .project .img {
+  margin-bottom: 1em;
+}
+
+.work .projects .projects-name .projects-data .source-code {
+  margin-right: 10px;
+}
+
+@media (max-width: 1250px) {
+  .work .projects .projects-name {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 50% 50%;
+        grid-template-columns: 50% 50%;
+  }
+}
+
+@media (max-width: 800px) {
+  .work .projects .projects-name {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+  }
+}
+
+@media (max-width: 992px) {
+  .work .projects {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .work .projects .languages {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .work .projects .languages .languages-name {
+    margin-right: 1em;
+    padding: 10px;
+  }
+}
+
+@media (max-width: 600px) {
+  .work .projects .languages {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 50% 50%;
+        grid-template-columns: 50% 50%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    justify-items: center;
+    margin-top: -3em;
+  }
+  .work .projects .languages .languages-name {
+    position: relative;
+    margin: 1em 0em 1em 0em;
+    padding: 10px;
+  }
+}
 /*# sourceMappingURL=CV.css.map */
