Cursor Pointer event added

--- a/css/_about.scss
+++ b/css/_about.scss
@@ -98,6 +98,7 @@
         }
     & .skill
         {
+        cursor: pointer;
         border-radius: 20px;
         background: none;
         box-shadow: -5px -5px 12px rgba(255,255,255,1),
@@ -105,6 +106,10 @@
                     inset 2px 2px 8px rgba(255,255,255,.9),
                     2px 2px 8px rgba(0,0,0,.6);
         }
+    }
+    & .Education
+    {
+        cursor: pointer;
     }
 }
 .skill-edu .option .skillactive
