--- a/css/CV.css
+++ b/css/CV.css
@@ -613,10 +613,15 @@
 }
 
 .skill-edu .option .skill {
+  cursor: pointer;
   border-radius: 20px;
   background: none;
   -webkit-box-shadow: -5px -5px 12px white, -3px -3px 12px rgba(255, 255, 255, 0.6), inset 2px 2px 8px rgba(255, 255, 255, 0.9), 2px 2px 8px rgba(0, 0, 0, 0.6);
           box-shadow: -5px -5px 12px white, -3px -3px 12px rgba(255, 255, 255, 0.6), inset 2px 2px 8px rgba(255, 255, 255, 0.9), 2px 2px 8px rgba(0, 0, 0, 0.6);
+}
+
+.skill-edu .Education {
+  cursor: pointer;
 }
 
 .skill-edu .option .skillactive {
